syntax = "proto3";

package greet;

option go_package = "github.com/developerdiwakar/grpc-go-course/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  // gRPC Unary API
  rpc Greet(GreetRequest) returns (GreetResponse);
  // gRPC Server Streaming API
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
  // gRPC Client Streaming API
  rpc LongGreet (stream GreetRequest) returns (GreetResponse);
  // gRPC Bi-directional API
  rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
};